@@ -365,8 +365,10 @@
           If dpdk-socket-mem and dpdk-alloc-mem are not specified, dpdk-socket-mem
           will be used and the default value is 1024 for each numa node. If
           dpdk-socket-mem and dpdk-alloc-mem are specified at same time,
-          dpdk-socket-mem will be used as default. Changing this value
-          requires restarting the daemon.
+          dpdk-socket-mem will be used as default. With the 2.17 release,
+          dpdk-socket-mem will no longer be used by default. DPDK defaults will
+          be used instead.
+          Changing this value requires restarting the daemon.
         </p>
       </column>
 
@@ -388,6 +390,8 @@
           options specified or <code>--legacy-mem</code> provided in
           <ref column="other_config" key="dpdk-extra"/>, limits will not be
           applied.
+          With the 2.17 release, the OVS default value will no longer be
+          provided, and DPDK defaults will be used instead.
           Changing this value requires restarting the daemon.
         </p>
       </column>
